[gd_scene load_steps=7 format=2]

[ext_resource path="res://menu/Shop.gd" type="Script" id=1]
[ext_resource path="res://OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 93.0
margin_top = 61.0
margin_right = 948.0
margin_bottom = 522.0
color = Color( 0.509804, 0.462745, 0.0705882, 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 344.0
margin_top = 17.0
margin_right = 666.0
margin_bottom = 59.0
rect_rotation = -0.160415
custom_fonts/font = SubResource( 2 )
text = "Click on a non hive tile!"

[node name="Resume" type="Button" parent="."]
margin_left = 143.0
margin_top = 99.0
margin_right = 155.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 3 )
text = "Resume"

[node name="BuyHive" type="Button" parent="."]
margin_left = 141.0
margin_top = 191.0
margin_right = 262.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 1 )
text = "Buy Hive slots!"

[node name="Quit" type="Button" parent="."]
margin_left = 142.0
margin_top = 148.0
margin_right = 154.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 4 )
text = "Quit"

[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="BuyHive" to="." method="_on_BuyHive_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
